test swift version 3

--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin id="outsystems-plugin-sweetalert" version="1.0"
     xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <name>IGStories</name>
+    <name>SweetAlert</name>
     <js-module name="SweetAlert" src="www/SweetAlert.js">
         <clobbers target="SweetAlert" />
     </js-module>
@@ -11,6 +11,7 @@
             <feature name="SweetAlert">
                 <param name="ios-package" value="SweetAlert" />
             </feature>
+            <preference name="UseSwiftLanguageVersion" value="3" />
         </config-file>
         <source-file src="src/ios/AppDelegate.swift" />
         <source-file src="src/ios/SweetAlert.swift" />
